--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,3 +1,25 @@
-nav {
+/*
+ * Font for navigation bar
+ */
+ nav {
+  height: 120px;
+  width: 100%;
+  background-color: #4056A1;
+  color: #FFFFFF;
   font-family: 'Bungee', sans-serif;
+  padding: 0 1.5em;
+  display: flex;
+  justify-content: space-between;
+}
+
+nav .new-tweet {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  font-family: sans-serif;
+}
+
+nav .new-tweet i {
+  color: #ee5151;
 }
