--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -32,13 +32,17 @@ main .new-tweet .counter {
   flex-direction: row;
 }
 
-.new-tweet label {
+main .new-tweet .counter.invalid {
+  color: #ee5151;
+}
+
+main .new-tweet label {
   display: block;
   margin-bottom: 0.5rem;
   font-family: sans-serif;
 }
 
-.new-tweet textarea {
+main .new-tweet textarea {
   width: 100%;
   height: 3rem;
   padding: 0.5rem;
@@ -48,7 +52,7 @@ main .new-tweet .counter {
   background-color: #f4f1ec;
 }
 
-footer {
+main footer {
   height: 120px;
   width: 100%;
   padding: 0 1.5em;
