--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,4 +1,4 @@
-header {
+header.under-nav.my-header {
   height: 400px;
   width: 100%;
   display: flex;
@@ -9,25 +9,25 @@ header {
   background-image: url(http://www.transparenttextures.com/patterns/arches.png);
 }
 
-header > div:first-child {
+header.under-nav.my-header > div:first-child {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 /*image*/
-header > div:first-child img {
+header.under-nav.my-header > div:first-child img {
   width: 170px;
   height: 170px;
 }
 
-header > div:last-child {
+header.under-nav.my-header > div:last-child {
   text-align: center;
   margin-top: 20px;
 }
 
 /*name header*/
-header > div:last-child h2 {
+header.under-nav.my-header > div:last-child h2 {
   margin: 0;
   font-size: 28px;
   font-weight: bold;
