--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -5,7 +5,7 @@ header.under-nav.my-header {
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  background-color: #00e3c5;
+  background-color: #e5c720;
   background-image: url(http://www.transparenttextures.com/patterns/arches.png);
 }
 
@@ -16,9 +16,10 @@ header.under-nav.my-header > div:first-child {
 }
 
 /*image*/
-header.under-nav.my-header > div:first-child img {
+header.under-nav.my-header img {
   width: 170px;
   height: 170px;
+  align-items: center;
 }
 
 header.under-nav.my-header > div:last-child {
@@ -27,9 +28,10 @@ header.under-nav.my-header > div:last-child {
 }
 
 /*name header*/
-header.under-nav.my-header > div:last-child h2 {
-  margin: 0;
+header.under-nav.my-header h2 {
+  margin: 10px;
   font-size: 28px;
   font-weight: bold;
-  color: #333;
+  color: #f7f7f7;
+  font-family: sans-serif;
 }
