--- a/public/styles/tweets-container.css
+++ b/public/styles/tweets-container.css
@@ -7,14 +7,14 @@ article.tweet {
 }
 
 section .tweet header {
-  background-color:  #f4f1ec;
+  background-color: #f4f1ec;
   background-image: none;
 }
 
 
 .tweet {
   border: 3px solid #ccc;
-   width: 100%;
+  width: 100%;
   margin-top: 20px;
   padding: 20px;
 }
@@ -22,25 +22,31 @@ section .tweet header {
 .tweet header {
   display: flex;
   align-items: flex-start;
+  justify-content: space-around;
+  flex-direction: row;
 }
 
 .tweet header img {
   width: 50px;
   height: 50px;
-  border-radius: 50%;
+  border-radius: 25%;
   margin-right: 10px;
-  margin-bottom: 200px;
+  margin-bottom: 20px;
 }
 
 .tweet header h3 {
-  margin: 0;
-  font-size: 1.2rem;
+  display: block;
+  font-size: 1.17em;
+  margin-block-start: 1em;
+  margin-block-end: 5em;
+  font-weight: bold;
+  padding-right: 1000px;
+  padding-bottom: 20px;
 }
 
 
 .tweet header p.username {
   color: gray;
-  margin-left: 10px;
 }
 
 .tweet-content {
@@ -48,7 +54,12 @@ section .tweet header {
 }
 
 .tweet-content p {
-  margin: 0;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 100px;
+  font-size: 1.5rem;
+  font-family: sans-serif;
+  border-bottom: solid;
 }
 
 .tweet footer {
@@ -63,7 +74,7 @@ section .tweet header {
 
 .tweet footer .icons {
   display: flex;
-  justify-content: left ;
+  justify-content: left;
 }
 
 .tweet footer .icons i {
