--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -32,6 +32,10 @@ body {
   margin: 0 auto;
 }
 
+main {
+  height: 100%;
+}
+
 /* Tablet Styles */
 @media only screen and (min-width: 768px) {
   .feature {
