--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,13 +1,10 @@
 main .new-tweet {
-  height: 120px;
+  height: 230px;
   width: 100%;
-  padding: 0 1.5em;
-  justify-content: space-evenly;
 }
 
 main .new-tweet h2 {
-  margin-top: 0;
-  margin-bottom: 1rem;
+  margin: 0;
   font-size: 1.5rem;
   font-family: sans-serif;
 }
@@ -16,13 +13,9 @@ main .new-tweet button {
   background-color: #4056A1;
   color: #FFFFFF;
   font-family: 'Bungee', sans-serif;
-  padding: -1.5rem .5rem;
-  border: none;
   font-size: 1.7rem;
   cursor: pointer;
-  margin-right: 0.5rem;
   height: 52px;
-  width: 11%;
 }
 
 main .new-tweet .counter {
@@ -40,33 +33,31 @@ main .new-tweet label {
   display: block;
   margin-bottom: 0.5rem;
   font-family: sans-serif;
+  padding-top: 10px;
 }
 
 main .new-tweet textarea {
   width: 100%;
   height: 3rem;
-  padding: 0.5rem;
-  border-bottom: 6px solid;
-  resize: vertical;
   font-size: 1.5rem;
   background-color: #f4f1ec;
 }
 
-main footer {
-  height: 120px;
+main .new-tweet-footer {
+  height: 60px;
   width: 100%;
-  padding: 0 1.5em;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 main .new-tweet .error-message {
   background-color: #f8d7da;
   border: 1px solid #e21227;
+  height: 30px;
   color: #e01f33;
-  padding: 10px;
-  margin-bottom: 20px;
   display: none;
+  font-family: sans-serif, bold;
 }
 
 
